# BOSC

./: .gitignore  BOSC - Noter.md
ObligatoriskOpgave1/: README.md
ObligatoriskOpgave1/bosh/: bosh.c
ObligatoriskOpgave1/src/: bosh.c
ObligatoriskOpgave1/tex/: Makefile  main.tex
ObligatoriskOpgave1/tex/chapters/: 1-indledning.tex  2-implementation.tex  3-test.tex  4-konklusion.tex
ObligatoriskOpgave2/src/: CMakeLists.txt  Makefile  Makefile.txt  opgave1.c
ObligatoriskOpgave2/src/banker/: Makefile  Makefile.txt  banker.c  opgave4.c  test.sh  wronginput.txt
ObligatoriskOpgave2/src/list/: Makefile  fifotest.c  list.c  list.h  main.c  opgave2.c
ObligatoriskOpgave2/src/producer-consumer/: producer-consumer.c
ObligatoriskOpgave2/src/producer_consumer/: Makefile  Makefile.txt  producer_consumer.c  sleep.c  sleep.h
ObligatoriskOpgave2/src/sum/: Makefile  sum.c
ObligatoriskOpgave2/tex/: Makefile  main.tex
ObligatoriskOpgave2/tex/chapters/: 1-indledning.tex  2-implementation.tex  3-test.tex  4-konklusion.tex  5-sourcecode.tex
ObligatoriskOpgave3/: .gitignore
ObligatoriskOpgave3/results/: Statistics.ods  Statistics.xlsx  results.txt  runCustomFocus  runCustomScan.sh  runCustomSort.sh  runFifoFocus  runFifoScan  runFifoSort.sh  runRandFocus  runRandScan.sh  runRandSort
ObligatoriskOpgave3/src/: Makefile  main.c  myvirtualdisk
ObligatoriskOpgave3/tex/: Makefile  main.tex
ObligatoriskOpgave3/tex/chapters/: 1-indledning.tex  2-implementation.tex  3-test.tex  4-diskussion.tex  4-konklusion.tex  5-konklusion.tex  5-sourcecode.tex  6-sourcecode.tex
